[gd_scene load_steps=2 format=3 uid="uid://qg5rws7l4t6d"]

[ext_resource type="Script" path="res://resource/organs/continuous_organ/energy_bundle_organ.gd" id="1_u8jmr"]

[node name="EnergyBundleOrgan" type="CharacterBody2D"]
script = ExtResource("1_u8jmr")
frist_pos = Vector2(45, 45)
second_pos = Vector2(40, -50)
organ_name = "能量束"
organ_desc = "将线路的激活机关和激活器绑定
"

[node name="FristRayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(45, 45)
collision_mask = 32

[node name="SecondRayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(40, -50)
collision_mask = 32

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
